--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -2,6 +2,7 @@
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
     color: var(--text-color);
+    width: 99.3vw;
 }
 
 header{
