--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -47,6 +47,15 @@ li a:hover {
   transition: 0.8s;
 }
 
+.exit {
+  background-color: dodgerblue;
+  width: 50px;
+  height: 30px;
+  border-radius: 8px;
+  font-size: 12px;
+  opacity: 0.5;
+}
+
 /*---  HOME  ---*/
 
 .home {
